fix: remove default button transition property to avoid flickering
Fix #158

--- a/src/elements/ne-button/_mixins.pcss
+++ b/src/elements/ne-button/_mixins.pcss
@@ -15,7 +15,6 @@
   color: env(--buttonForeground);
   padding: env(--buttonYPadding) env(--buttonXPadding);
   font-size: env(--buttonFontSize);
-  transition: background-color 0.1s ease-out;
   line-height: env(--buttonLineHeight);
   box-shadow: env(--buttonShadow);
   text-decoration: initial;
